# essentia

./: CMakeLists.txt
cmake/: sources.cmake
src/algorithms/standard/: cubicspline.h  spline.h
src/algorithms/tonal/: nnlschroma.h
src/essentia/: essentiamath.h  roguevector.h  types.h
